fix spacing around footer links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,10 +150,9 @@ footer{
     font-size: 90%;
     text-align: center;
     margin:20px 0;
-    padding-left: 15px
 }
 footer a{
-  padding: 5px
+  padding: 0px
 }
 
 
